[package]
name = "kepler_wallet_util"
version = "2.0.0"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export kepler crates"
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler-wallet"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
# kepler_core = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_keychain = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_chain = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_util = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_api = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_store = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }

# For beta release
# kepler_core = { git = "https://github.com/keplernetwork/kepler", branch = "master" }
# kepler_keychain = { git = "https://github.com/keplernetwork/kepler", branch = "master"  }
# kepler_chain = { git = "https://github.com/keplernetwork/kepler", branch = "master"  }
# kepler_util = { git = "https://github.com/keplernetwork/kepler", branch = "master"  }
# kepler_api = { git = "https://github.com/keplernetwork/kepler", branch = "master"  }
# kepler_store = { git = "https://github.com/keplernetwork/kepler", branch = "master"  }

# For bleeding edge
# kepler_core = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.0.0" }
# kepler_keychain = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.0.0" }
# kepler_chain = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.0.0" }
# kepler_util = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.0.0" }
# kepler_api = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.0.0" }
# kepler_store = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.0.0" }

# For local testing
kepler_core = { path = "../../kepler_node/core"}
kepler_keychain = { path = "../../kepler_node/keychain"}
kepler_chain = { path = "../../kepler_node/chain"}
kepler_util = { path = "../../kepler_node/util"}
kepler_api = { path = "../../kepler_node/api"}
kepler_store = { path = "../../kepler_node/store"}

[dev-dependencies]
pretty_assertions = "0.5.1"
